<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/item_title_placeholder"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:layout_marginVertical="8dp"
            android:text="@string/item_description_placeholder"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textDescription"
            android:hint="@string/add_to_cart"
            android:onClick="addToCart"
            android:layout_marginVertical="8dp"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>